# virtual-cloud-storage-system

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-commands.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
data/db/base/13757/: 1247  1249  1259  16384  16385  16391  16393  16394  16398  16400  16402  16403  16407  16409  16414  16416  16418  16423  16425  (+60 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13757.stat  global.stat
major2/: asgi.py  settings.py
src/major2/: settings.py  urls.py  wsgi.py
src/user_auth/: admin.py  forms.py  models.py  urls.py  views.py
src/user_auth/migrations/: 0001_initial.py  0002_files.py
src/user_auth/templates/: account.html  dashboard.html  home.html  subscription.html
user_auth/: forms.py  models.py  urls.py  views.py
user_auth/migrations/: 0001_initial.py  0002_alter_subscription_subscription_plan.py  0002_delete_subscription.py  0003_delete_subscription.py  0003_initial.py  0004_initial.py  0004_remove_subscription_id_alter_subscription_username.py  0005_remove_subscription_user_id.py  0005_subscription_storage_used.py  0006_alter_subscription_storage_used.py  0006_remove_subscription_subscription_plan.py  0007_alter_subscription_storage_used.py  0007_delete_subscription.py  0008_initial.py  0009_rename_user_id_subscription_username_and_more.py  0010_alter_subscription_username.py
user_auth/templates/: account.html  dashboard.html  home.html  layout.html  subscription.html
user_auth/templates/registration/: login.html  sign_up.html  signup.html
(+2 files in other folders)
