[tool.poetry]
name = "Virtual Cloud Storage"
version = "0.1.0"
description = "Virtual Cloud Storage with django and postgres"
authors = ["code-arpit <code.arpitjain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
black = "^22.3.0"
ipython = "^8.2.0"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
